# StockAnalysisMCP

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/database/: 2025-06-11.db
src/stock_analysis/: constant_parameters.py  main.py
