[project]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Varun G",email = "varungangu1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "mcp (>=1.9.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "stock_analysis", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
